--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://tehnatha.github.io/blog
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Bleeding on the Keyboard
+subtitle: Reports from the front end of the command line.
+author: Nathan Stier
 simple_search: https://www.google.com/search
 description:
 
@@ -16,7 +16,7 @@ description:
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: /blog/atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
@@ -27,9 +27,9 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /blog
-permalink: /:year/:month/:day/:title/
+permalink: /blog/:year/:month/:day/:title/
 source: source
-destination: public
+destination: public/blog
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
